--- a/css/practice_api.css
+++ b/css/practice_api.css
@@ -45,7 +45,7 @@ body {
 }
 
 .roundBorderContainer:hover{
-    background-color: rgba(128, 128, 128, 0.25);
+    background-color: rgba(101, 206, 255, 0.25);
 }
 
 .timeTitle{
@@ -61,4 +61,39 @@ body {
 .roundBorderContainer .time {
     font-size: 1.8rem;
     font-weight: bold;
+}
+
+#introField {
+    vertical-align: middle;
+    text-align: center;
+}
+#introField > .introImg {
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
+    border: 2px solid rgba(128, 128, 128, 0.5);
+    margin: 5px;
+}
+
+#introField > .introName {
+    display: inline-block;
+    vertical-align: top;
+    font-weight: bold;
+    font-size: 32px;
+}
+
+#introField > .borderLine {
+    display: flex;
+    height: 2px;
+    width: 80%;
+    padding: 0 10px;
+    margin: 0 auto;
+    background-color: rgba(128, 128, 128, 0.5);
+}
+
+#introField > .introText {
+    text-align: left;
+    margin: 5px auto;
+    padding: 5px;
+    font-size: 1.2rem;
 }
